fix for form inputs cutting off text

--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -55,6 +55,10 @@ a {
     }
 }
 
+input {
+    line-height: inherit;
+}
+
 hr {
     margin: 4rem 0;
     border-color: $s1;
