--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -36,7 +36,7 @@
     &__input {
         width: 100%;
         max-width: 100%;
-        padding: .8em;
+        padding: .6em .8em;
         border: 1px solid #b1b1b1; 
         background: #fff;
         box-shadow: inset 0 0.2rem 0.8rem 0.6px rgba($color-black, .05);
